fix java 21 syntax and apply spotless on develop code
Signed-off-by: xinyual <xinyual@amazon.com>